mern-todo-app/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  namespace: backend-staging
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: vanillavladimir/backend:latest
          ports:
            - containerPort: 4000
              name: nodejs-port
  selector:
    matchLabels:
      app: server
