mern-todo-app/front-end-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: client-staging
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: vanillavladimir/client:latest
          ports:
            - containerPort: 3000
              name: http-port
  selector:
    matchLabels:
      app: client
