mern-todo-app/front-end-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: client-staging
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http-port
  selector:
    app: client
#  type: LoadBalancer
