mern-todo-app/frontend-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: client-ingress
  namespace: client-staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "client-staging"
spec:
  rules:
    - host: client.vladgerald.tech
      http:
        paths:
          #- path: /belajar
          - backend:
              serviceName: client-service
              servicePort: 80
