mern-todo-app/mongo-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mongo-ingress
#  namespace: landing-page-production
# annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
#    kubernetes.io/ingress.class: "nginx"
#    cert-manager.io/issuer: "landing-page-production"
spec:
  rules:
    - host: mongo.vladgerald.tech
      http:
        paths:
          #- path: /belajar
          - backend:
              serviceName: mongo
              servicePort: 27017
#  tls:
#    - hosts:
#        - mongo.vladgerald.tech
